Backend v2 (#4)
* WIP

* auth, tests, code structure changes

* auth, tests, code structure changes

* changes

---------

Co-authored-by: Martin Pechacek <martin.pechacek@actumdigital.com>